	(update_notifier_init): Store the handler ID for the connection of
	the 'pressed' signal about the main button.
	(update_notifier_finalize): Disconnect handlers from signals.
	(update_state): Disconnect handler from the 'activated' signal
	before destroying a previously created menu. Also, store the
	handler ID for the connection of the 'activated0 signal about the
	menu item that opens HAM.
	

2007-11-20  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/operations.cc (ip_check_required_reboot): Use
	ai_ia_rebooting_required.

2007-11-19  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/update-notifier.c (UPDATE_NOTIFIER_OP_CHECK_STATE): New
	define for a currently supported dbus method. Updated all callers.
	(UPDATE_NOTIFIER_OP_CHECK_UPDATES): Likewise.
	(setup_alarm): Added extra logic to search and delete all the
	available alarms associated with the update-notifier before
	setting a new one (Fixes bug in README file).

	* README: Removed "Clean out all alarm events when setting a new
	one..." bug from the bugs list.

2007-11-16  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/update-notifier.c (HTTP_PROXY_GCONF_DIR): New define to
	obtain info about the http proxy via GConf.
	(UPDATE_NOTIFIER_SERVICE): New define (For DBus issues).
	(UPDATE_NOTIFIER_OBJECT_PATH): New define (For DBus issues).
	(UPDATE_NOTIFIER_INTERFACE): New define (For DBus issues).
	(HILDON_APP_MGR_SERVICE): New define (For DBus issues).
	(HILDON_APP_MGR_OBJECT_PATH): New define (For DBus issues).
	(HILDON_APP_MGR_INTERFACE): New define (For DBus issues).
	(update_notifier_finalize): Dispose the GtkMenu and the static
	picture used with the blinkifier.
	(add_readonly_item): Use a gchar * for 'text' variable.
	(dbus_filter): Code factorization.
	(setup_dbus): Use the new definition of UPDATE_NOTIFIER_SERVICE.
	(show_check_for_updates_view): Use the new definitions of
	HILDON_APP_MGR_SERVICE, HILDON_APP_MGR_OBJECT_PATH and
	HILDON_APP_MGR_INTERFACE.
	(check_for_updates_done): Likewise.